--- a/src/XelsPCHDesktopWalletApp/Views/Pages/ReceivePages/XelsPage.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/ReceivePages/XelsPage.xaml
@@ -9,151 +9,146 @@
       Title="XelsPage">
 
     <Grid Background="White" Margin="0,7,0,0" x:Name="Xels_Receive_Page">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <!--- image -->
-            <Border Grid.Row="0" Height="150">
-                <Image x:Name="image" />
-            </Border>
-            <!-- signle address and copy button  -->
-            <Border Grid.Row="1" x:Name="SingleAddress" >
-                <Grid Margin="100 2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition  Width="2*"/>
-                        <ColumnDefinition  Width="0.5*"/>
-                    </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <!--- image -->
+        <Border Grid.Row="0">
+            <Image x:Name="image" />
+        </Border>
+        <!-- signle address and copy button  -->
+        <Border Grid.Row="1" x:Name="SingleAddress" >
+            <Grid Margin="100 2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition  Width="2*"/>
+                    <ColumnDefinition  Width="0.5*"/>
+                </Grid.ColumnDefinitions>
 
-                    <TextBox Grid.Column="0"  x:Name="textBoxTextToQr" Height="30"
+                <TextBox Grid.Column="0"  x:Name="textBoxTextToQr" Height="30"
                       BorderBrush="Green" BorderThickness="1" Padding="5" Margin=" 5 0"  IsReadOnly="True" />
 
-                    <Button Grid.Column="1" Content="Copy" Click="SingleAddress_Copy_Button_Click"
+                <Button Grid.Column="1" Content="Copy" Click="SingleAddress_Copy_Button_Click"
                             RenderTransformOrigin="2.423,0.568"      Margin="15 05"                        
                         BorderThickness="1" BorderBrush="Green" Background="White" Foreground="Green"  >
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
-                </Grid>
-            </Border>
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+            </Grid>
+        </Border>
 
-            <!---  show all addresses button  -->
-            <Border Grid.Row="2" >
-                <Border x:Name="BackShowAllAddressButton" Margin="0 10">
-                    <Button x:Name="showall" Click="ShowAllAddressButton_Click" HorizontalAlignment="Center" 
+        <!---  show all addresses button  -->
+        <Border Grid.Row="2" >
+            <Border x:Name="BackShowAllAddressButton" Margin="0 10">
+                <Button x:Name="showall" Click="ShowAllAddressButton_Click" HorizontalAlignment="Center" 
                          FontSize="10" Content="Show All Addresses"
                            RenderTransformOrigin="0.51,0.144" Background="Green">
-                    </Button>
-                </Border>
+                </Button>
             </Border>
+        </Border>
 
-            <!-- address list -->
-            <Border Grid.Row="3" Margin="0,-70,0,0" >
+        <!-- address list -->
+        <Border Grid.Row="3" Margin="0,-70,0,0" >
 
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-                    <Border x:Name="AllAddressList" Grid.Row="0"  Visibility="Hidden" VerticalAlignment="Center" HorizontalAlignment="Center"  BorderBrush="Green" BorderThickness="0.5" CornerRadius="3">
-                        <TabControl>
-                            <TabItem Header="Unused Addresses">
+                <Border x:Name="AllAddressList" Grid.Row="0"  Visibility="Hidden" VerticalAlignment="Center" HorizontalAlignment="Center"  BorderBrush="Green" BorderThickness="0.5" CornerRadius="3">
+                    <TabControl>
+                        <TabItem Header="Unused Addresses">
 
-                                <ListView Margin="2,2,2,2" x:Name="UnusedAddressList" 
+                            <ListView Margin="2,2,2,2" x:Name="UnusedAddressList" 
                                               VerticalContentAlignment="Top"  
                                              ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="180"   
                                               ScrollViewer.CanContentScroll="False">
-                                    <ListView.View>
-                                        <GridView x:Name="tablist">
-                                            <GridViewColumn Header="{Binding Path=Address}" Width="300" DisplayMemberBinding="{Binding Path=Address}"  />
+                                <ListView.View>
+                                    <GridView x:Name="tablist">
+                                        <GridViewColumn Header="{Binding Path=Address}" Width="300" DisplayMemberBinding="{Binding Path=Address}"  />
 
-                                            <GridViewColumn Width="90" >
-                                                <GridViewColumn.CellTemplate>
-                                                    <DataTemplate>
-                                                        <TextBlock FontWeight="Bold">
+                                        <GridViewColumn Width="90" >
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock FontWeight="Bold">
                                                 <Button Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"  
                                                          Content="Copy" Height="30" Click="Address_Copy_Button_Click" />
-                                                        </TextBlock>
-                                                    </DataTemplate>
-                                                </GridViewColumn.CellTemplate>
-                                            </GridViewColumn>
-                                        </GridView>
-                                    </ListView.View>
-                                </ListView>
-                            </TabItem>
-                            <TabItem Header="Used Addresses">
-                                <ListView Margin="2,2,2,2" x:Name="UsedAddressList" VerticalContentAlignment="Top"  
+                                                    </TextBlock>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </TabItem>
+                        <TabItem Header="Used Addresses">
+                            <ListView Margin="2,2,2,2" x:Name="UsedAddressList" VerticalContentAlignment="Top"  
                                         ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="180"   ScrollViewer.CanContentScroll="False" >
-                                    <ListView.View>
-                                        <GridView>
-                                            <GridViewColumn Width="300" DisplayMemberBinding="{Binding Path=Address}"  />
-                                            <GridViewColumn Width="90" >
-                                                <GridViewColumn.CellTemplate>
-                                                    <DataTemplate>
-                                                        <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" >
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Width="300" DisplayMemberBinding="{Binding Path=Address}"  />
+                                        <GridViewColumn Width="90" >
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" >
                                                 <Button Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"  
                                                          Content="Copy" Height="30" Click="Address_Copy_Button_Click" />
-                                                        </TextBlock>
-                                                    </DataTemplate>
-                                                </GridViewColumn.CellTemplate>
-                                            </GridViewColumn>
-                                        </GridView>
-                                    </ListView.View>
-                                </ListView>
-                            </TabItem>
+                                                    </TextBlock>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </TabItem>
 
-                            <TabItem Header="Changed Addresses">
-                                <ListView Margin="2,2,2,2" x:Name="ChangedAddressList" VerticalContentAlignment="Top"  
+                        <TabItem Header="Changed Addresses">
+                            <ListView Margin="2,2,2,2" x:Name="ChangedAddressList" VerticalContentAlignment="Top"  
                                     ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="180"   ScrollViewer.CanContentScroll="False" >
-                                    <ListView.View>
-                                        <GridView>
-                                            <GridViewColumn Width="300" DisplayMemberBinding="{Binding Path= Address}"  />
-                                            <GridViewColumn Width="90" >
-                                                <GridViewColumn.CellTemplate>
-                                                    <DataTemplate>
-                                                        <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" >
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Width="300" DisplayMemberBinding="{Binding Path= Address}"  />
+                                        <GridViewColumn Width="90" >
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" >
                                                         <Button Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"  
                                                          Content="Copy" Height="30" Click="Address_Copy_Button_Click" />
-                                                        </TextBlock>
-                                                    </DataTemplate>
-                                                </GridViewColumn.CellTemplate>
-                                            </GridViewColumn>
-                                        </GridView>
-                                    </ListView.View>
-                                </ListView>
-                            </TabItem>
-                        </TabControl>
+                                                    </TextBlock>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </TabItem>
+                    </TabControl>
 
-                    </Border>
+                </Border>
 
-                    <Border Width="100" x:Name="BackSingleAddressButton" Grid.Row="1" Visibility="Hidden"   
+                <Border Width="100" x:Name="BackSingleAddressButton" Grid.Row="1" Visibility="Hidden"   
                             HorizontalAlignment="Center" Margin="0,5,0,0" 
                           >
-                        <Button  x:Name="backButton" 
+                    <Button  x:Name="backButton" 
                                  Click="BackSingleAddressButton_Click" Content="Back" 
                                  Background="White" BorderThickness="1" 
                                  Foreground="Green" 
                                  BorderBrush="Green" >
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5"/>
-                                </Style>
-                            </Button.Resources>
-                        </Button>
-                    </Border>
-                </Grid>
-            </Border>
-
-
-
-        </Grid>
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                </Border>
+            </Grid>
+        </Border>
     </Grid>
 
 </Page>
