--- a/src/XelsPCHDesktopWalletApp/MainWindow.xaml
+++ b/src/XelsPCHDesktopWalletApp/MainWindow.xaml
@@ -102,51 +102,53 @@
 
 
     </StackPanel>-->
-    <Border Background="White" BorderBrush="#FFBBBBBB" BorderThickness="1,1,1,1" CornerRadius="10,10,10,10">
-        <Canvas x:Name="Log_in_Window" Margin="5,5,5,5" KeyDown="Grid_KeyDown">
+    <Grid x:Name="Log_in_Window">
+        <Border Background="White" BorderBrush="#FFBBBBBB" BorderThickness="1,1,1,1" CornerRadius="10,10,10,10">
+            <Canvas Margin="5,5,5,5" KeyDown="Grid_KeyDown">
 
-            <Rectangle Panel.ZIndex="1" Width="338" Height="280" VerticalAlignment="Top" RadiusY="10" RadiusX="10">
-                <Rectangle.Fill>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FF41A43C"/>
-                        <GradientStop Color="#FF41A43C" Offset="1"/>
-                        <GradientStop Color="#FF41A43C" Offset="0.546"/>
-                    </LinearGradientBrush>
-                </Rectangle.Fill>
-            </Rectangle>
 
-            <Rectangle Panel.ZIndex="3" Canvas.Left="30" Canvas.Right="30" Canvas.Top="170" Name="loginInforactaangle" Width="280" Height="240" VerticalAlignment="Bottom"  RadiusY="10" RadiusX="10" Fill="White">
-                <Rectangle.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
-                </Rectangle.Effect>
-            </Rectangle>
-            <Grid Panel.ZIndex="4" Canvas.Left="35" Canvas.Right="35" Canvas.Top="170" Name="loginInfoGrid" VerticalAlignment="Bottom" Width="268"  Height="240">
-                <Label Content="LOGIN" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
-                <Label x:Name="labChainCheck" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,25,0,0" Foreground="Green" FontSize="12"/>
+                <Rectangle Panel.ZIndex="1" Width="338" Height="280" VerticalAlignment="Top" RadiusY="10" RadiusX="10">
+                    <Rectangle.Fill>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FF41A43C"/>
+                            <GradientStop Color="#FF41A43C" Offset="1"/>
+                            <GradientStop Color="#FF41A43C" Offset="0.546"/>
+                        </LinearGradientBrush>
+                    </Rectangle.Fill>
+                </Rectangle>
 
-                <StackPanel VerticalAlignment="Center" Margin="15">
+                <Rectangle Panel.ZIndex="3" Canvas.Left="30" Canvas.Right="30" Canvas.Top="170" Name="loginInforactaangle" Width="280" Height="240" VerticalAlignment="Bottom"  RadiusY="10" RadiusX="10" Fill="White">
+                    <Rectangle.Effect>
+                        <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
+                    </Rectangle.Effect>
+                </Rectangle>
+                <Grid Panel.ZIndex="4" Canvas.Left="35" Canvas.Right="35" Canvas.Top="170" Name="loginInfoGrid" VerticalAlignment="Bottom" Width="268"  Height="240">
+                    <Label Content="LOGIN" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
+                    <Label x:Name="labChainCheck" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,25,0,0" Foreground="Green" FontSize="12"/>
 
-                    <ComboBox x:Name="comboWallets" SelectionChanged="comboWallets_SelectionChanged" ItemsSource="{Binding  Path=walletList, Mode=TwoWay}"
+                    <StackPanel VerticalAlignment="Center" Margin="15">
+
+                        <ComboBox x:Name="comboWallets" SelectionChanged="comboWallets_SelectionChanged" ItemsSource="{Binding  Path=walletList, Mode=TwoWay}"
                            DisplayMemberPath="Name" SelectedValuePath="Name"
                           Margin="0,10" materialDesign:HintAssist.Hint="WALLET NAME" 
                           Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                           FontFamily="Champagne &amp; Limousines" FontSize="15" >
 
-                    </ComboBox>
-                    <!-- 
+                        </ComboBox>
+                        <!-- 
                 
                 
                 SelectedItem="{Binding Path=SelectedWallet, Mode=TwoWay}"
                 <TextBox Margin="0,10" materialDesign:HintAssist.Hint="EMAIL" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>-->
-                    <PasswordBox Name="password"  PasswordChar="*" Margin="0,10" materialDesign:HintAssist.Hint="PASSWORD" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="15"/>
-                </StackPanel>
-            </Grid>
-            <Button Panel.ZIndex="5" Width="150" x:Name="decryptButton" Click="DecryptButton_ClickAsync" Background="#FF41A43C" Canvas.Left="100" Canvas.Right="100" Canvas.Top="395" Content="DECRYPT"/>
-            <Button Panel.ZIndex="6" x:Name="ButtonClose" Click="ButtonClose_Click" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="40" Height="30" Margin="300,0,0,468" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White">
-                <materialDesign:PackIcon Kind="CloseBold" Foreground="White" VerticalAlignment="Center"/>
-            </Button>
+                        <PasswordBox Name="password"  PasswordChar="*" Margin="0,10" materialDesign:HintAssist.Hint="PASSWORD" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="15"/>
+                    </StackPanel>
+                </Grid>
+                <Button Panel.ZIndex="5" Width="150" x:Name="decryptButton" Click="DecryptButton_ClickAsync" Background="#FF41A43C" Canvas.Left="100" Canvas.Right="100" Canvas.Top="395" Content="DECRYPT"/>
+                <Button Panel.ZIndex="6" x:Name="ButtonClose" Click="ButtonClose_Click" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Width="40" Height="30" Margin="300,0,0,468" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White">
+                    <materialDesign:PackIcon Kind="CloseBold" Foreground="White" VerticalAlignment="Center"/>
+                </Button>
 
-            <TextBlock Panel.ZIndex="7"  Name="CreateOrReplaceBlock" HorizontalAlignment="Center" Canvas.Left="90" Canvas.Top="445" Foreground="Gray" Cursor="Hand">
+                <TextBlock Panel.ZIndex="7"  Name="CreateOrReplaceBlock" HorizontalAlignment="Center" Canvas.Left="90" Canvas.Top="445" Foreground="Gray" Cursor="Hand">
                 <Hyperlink RequestNavigate="Hyperlink_RequestNavigate" NavigateUri="http://www.google.com"  TextDecorations="">
                     <Hyperlink.Style>
                     <Style TargetType="{x:Type Hyperlink}"
@@ -155,10 +157,11 @@
                     </Style>
                 </Hyperlink.Style><Run Text="CREATE OR RESTORE A WALLET"/>
                 </Hyperlink>
-            </TextBlock>
-            <Image Panel.ZIndex="8" Name="preLoader" Canvas.Left="145" Canvas.Right="145" Canvas.Top="230" Visibility="Collapsed"  Width="50" Height="50" gif:ImageBehavior.AnimatedSource="/Assets/Images/loading-3.gif" />
-            <Image Panel.ZIndex="2" Source="/Assets/Images/icon.ico" Width="100" Height="100" Canvas.Top="30" Canvas.Left="119" Canvas.Right="119"/>
-            <Label x:Name="laNodeStatusCheck" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Red" Margin="0,350,0,0" FontSize="14" Width="268"/>
-        </Canvas>
-    </Border>
+                </TextBlock>
+                <Image Panel.ZIndex="8" Name="preLoader" Canvas.Left="145" Canvas.Right="145" Canvas.Top="230" Visibility="Collapsed"  Width="50" Height="50" gif:ImageBehavior.AnimatedSource="/Assets/Images/loading-3.gif" />
+                <Image Panel.ZIndex="2" Source="/Assets/Images/icon.ico" Width="100" Height="100" Canvas.Top="30" Canvas.Left="119" Canvas.Right="119"/>
+                <Label x:Name="laNodeStatusCheck" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Red" Margin="0,350,0,0" FontSize="14" Width="268"/>
+            </Canvas>
+        </Border>
+    </Grid>
 </Window>
