Mistakes fixed of previous SelsPage git push on XLC and PCH

--- a/src/XelsPCHDesktopWalletApp/Views/Pages/ReceivePages/SelsPage.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/ReceivePages/SelsPage.xaml
@@ -40,8 +40,8 @@
                 </Border>
             </Grid>
         </Border>
-        <Border Grid.Row="2" Height="50" Width="228"  x:Name="gridRow2" Visibility="Collapsed">
-            <TextBlock Text="You have not imported SELS address yet." FontSize="20" FontWeight="Bold" Margin="-85,0,-165,0" />
+        <Border Grid.Row="2" HorizontalAlignment="Center" x:Name="gridRow2" Visibility="Collapsed">
+            <TextBlock Text="You have not imported SELS address yet." FontSize="20" FontWeight="Bold"/>
         </Border>
     </Grid>
 </Page>
