--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/LogoutConfirmUserControl.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/LogoutConfirmUserControl.xaml
@@ -30,7 +30,7 @@
                 </Style>
             </Border.Style>
 
-            <Grid TextOptions.TextFormattingMode="Ideal">
+            <!--<Grid TextOptions.TextFormattingMode="Ideal">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
@@ -41,10 +41,11 @@
                         <TextBlock FontSize="20" HorizontalAlignment="Center" 
                                    Margin="0 10 0 0"
                                    FontWeight="SemiBold" 
-                Text="Are you sure you want to logout?"/>
+                                   Text="Are you sure you want to logout?"/>
 
                         <TextBlock Text="Be aware that this will also Stop the staking process."  FontSize="15"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <!--<Button x:Name="closeBtn" Click="closeBtn_Click"  Background="Red" Foreground="White"
+                        -->
+            <!--<Button x:Name="closeBtn" Click="closeBtn_Click"  Background="Red" Foreground="White"
                                 VerticalAlignment="Top" HorizontalAlignment="Right" Content="X"  Height="15" Width="20" FontSize="10" Padding="7 0" HorizontalContentAlignment="Left" >
 
                             <Button.Resources>
@@ -53,6 +54,7 @@
                                 </Style>
                             </Button.Resources>
                         </Button>-->
+            <!--
                     </Grid>
                 </Border>
                 <Border Grid.Row="01">
@@ -88,7 +90,61 @@
                 </Border>
 
 
-            </Grid>
+            </Grid>-->
+
+            <StackPanel>
+                <Border Height="100">
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <TextBlock FontSize="20" HorizontalAlignment="Center" 
+                                   Margin="0 10 0 0"
+                                   FontWeight="SemiBold" 
+                                   Text="Are you sure you want to logout?"/>
+
+                        <TextBlock Text="Be aware that this will also Stop the staking process."  FontSize="15"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <!--<Button x:Name="closeBtn" Click="closeBtn_Click"  Background="Red" Foreground="White"
+                                VerticalAlignment="Top" HorizontalAlignment="Right" Content="X"  Height="15" Width="20" FontSize="10" Padding="7 0" HorizontalContentAlignment="Left" >
+
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="50"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>-->
+                    </StackPanel>
+                </Border>
+
+                <Border Height="100">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" Content="CANCEL" Click="cancelButton_Click"
+                        Background="Red" Foreground="White" Margin="100 0 10 0" RenderTransformOrigin="0.174,0.571" 
+                        FontWeight="Normal" HorizontalAlignment="Right">
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="15"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+
+                        <Button Grid.Column="1" Content="LOGOUT" Click="logoutButton_Click"
+                        Background="Green" 
+                                Margin="10 0 10 0" 
+                                Foreground="White"
+                                HorizontalAlignment="Left"
+                                FontWeight="Normal" >
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+
+                    </Grid>
+                </Border>
+            </StackPanel>
         </Border>
     </Grid>
 </UserControl>
